--- a/.tekton/base-image.yaml
+++ b/.tekton/base-image.yaml
@@ -93,3 +93,17 @@ spec:
             value: ./containerfile
         runAfter:
           - fetch-repository
+  workspaces:
+    - name: source
+      volumeClaimTemplate:
+        spec:
+          accessModes:
+            - ReadWriteOnce
+          resources:
+            requests:
+              storage: 1Gi
+    # This workspace will inject secret to help the git-clone task to be able to
+    # checkout the private repositories
+    - name: basic-auth
+      secret:
+        secretName: "{{ git_auth_secret }}"
