--- a/.tekton/base-image.yaml
+++ b/.tekton/base-image.yaml
@@ -34,8 +34,7 @@ spec:
     - name: revision
       value: "{{ revision }}"
     - name: image
-      #value: "image-registry.openshift-image-registry.svc:5000/image-builds/base-image:{{ revision }}"
-      value: "image-registry.openshift-image-registry.svc:5000/test-app/base-image:{{ revision }}"
+      value: "image-registry.openshift-image-registry.svc:5000/image-builds/base-image:{{ revision }}"
   pipelineSpec:
     params:
       - name: repo_url
@@ -94,6 +93,46 @@ spec:
             value: ./containerfile
         runAfter:
           - fetch-repository
+
+      - name: find-tag-image
+        taskRef:
+          resolver: cluster
+          params:
+            - name: kind
+              value: task
+            - name: name
+              value: SOMETASK
+            - name: namespace
+              value: openshift-pipelines
+        stepOverrides:
+          - name: oc
+            image: "$(params.image)"
+        params:
+        - name: SCRIPT
+          value: |
+            #!/bin/bash
+
+            RELEASE=$(params.revision)
+            NAMESPACE=image-builds
+            TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
+            TAG=$(skopeo list-tags  --tls-verify=false  --creds="serviceaccount:${TOKEN}" docker://image-registry.openshift-image-registry.svc.cluster.local:5000/$NAMESPACE/base-image | jq -r '.Tags[]')
+
+            for i in $TAG; do
+              if [[ "$i" == "$RELEASE" ]]; then
+                echo "Candidate for tagging: this is the latest version - $i"
+                echo "Removing existing latest tag and retagging with $RELEASE"
+
+                oc tag "base-image:latest" -d -n "$NAMESPACE"
+                oc tag "base-image:$RELEASE" "base-image:latest" -n "$NAMESPACE"
+              fi
+            done
+
+        runAfter:
+        - build-image
+
+
+
+
   workspaces:
     - name: source
       volumeClaimTemplate:
