--- a/.tekton/base-image.yaml
+++ b/.tekton/base-image.yaml
@@ -101,7 +101,7 @@ spec:
             - name: kind
               value: task
             - name: name
-              value: SOMETASK
+              value: openshift-client
             - name: namespace
               value: openshift-pipelines
         stepOverrides:
