--- a/.tekton/base-image.yaml
+++ b/.tekton/base-image.yaml
@@ -151,7 +151,7 @@ spec:
         runAfter:
         - build-image
 
-      - name: build-image
+      - name: skopeo-copy-quay-io
         taskRef:
           resolver: cluster
           params:
