--- a/.tekton/base-image.yaml
+++ b/.tekton/base-image.yaml
@@ -37,7 +37,7 @@ spec:
     - name: image
       value: "image-registry.openshift-image-registry.svc:5000/image-builds/base-image:{{ revision }}"
     - name: namespace
-      value: "base-image"
+      value: "image-builds"
   pipelineSpec:
     params:
       - name: repo_url
