--- a/.tekton/base-image.yaml
+++ b/.tekton/base-image.yaml
@@ -98,20 +98,14 @@ spec:
           - fetch-repository
 
       - name: find-image-tag
-        params:
-          - name: namespace
-            value: image-builds
+        #params:
+        #  - name: namespace
+        #    value: image-builds
         taskSpec:
-          params:
-            - name: namespace
-              type: string
-              description: "Namespace where the imagestream will reside"
-            #- name: image
-            #  type: string
-            #  description: "Image to use in this step - sourced at PipelineRun.spec.params"
-            #- name: revision
-            #  type: string
-            #  description: "Git sha used on the image as a tag - sourced at PipelineRun.spec.params"
+          #params:
+          #  - name: namespace
+          #    type: string
+          #    description: "Namespace where the imagestream will reside"
           steps:
             - name: find-image-tag
               image: "$(params.image)"
