--- a/.tekton/base-image.yaml
+++ b/.tekton/base-image.yaml
@@ -35,7 +35,7 @@ spec:
     - name: revision
       value: "{{ revision }}"
     - name: image
-      value: "image-registry.openshift-image-registry.svc:5000/{{ namespace }}/base-image:{{ revision }}"
+      value: "image-registry.openshift-image-registry.svc:5000/image-builds/base-image:{{ revision }}"
     - name: namespace
       value: "image-builds"
   pipelineSpec:
